[gd_scene load_steps=12 format=3 uid="uid://cn21xy6j02ur3"]

[ext_resource type="Script" path="res://registro.gd" id="1_uqqtu"]
[ext_resource type="Texture2D" uid="uid://b4rsvu3rt2hv1" path="res://Recursos/Fondos/06869317-8b23-46b8-b45b-5b3f034e277a.png" id="2_pcedv"]
[ext_resource type="Texture2D" uid="uid://cijakey6xt5in" path="res://Recursos/Fondos/5c1cd2237f4b43db7780df6fa7fe6770.jpg" id="2_x0dw3"]
[ext_resource type="Texture2D" uid="uid://tdotsof8n4su" path="res://Recursos/Fondos/Cyber.jpg" id="3_nm50x"]
[ext_resource type="FontFile" uid="uid://diw0h42sk6n42" path="res://Recursos/fuentes/Kenney Future.ttf" id="4_hc03k"]
[ext_resource type="FontFile" uid="uid://h0lcg2ndmnti" path="res://Recursos/fuentes/Kenney Blocks.ttf" id="5_kxp2b"]
[ext_resource type="Texture2D" uid="uid://b6iy2lusxx84b" path="res://Recursos/Botones/button (1).png" id="6_ixrty"]
[ext_resource type="Texture2D" uid="uid://p1ikj3obab5b" path="res://Recursos/Botones/button (2).png" id="7_8iuk7"]
[ext_resource type="AudioStream" uid="uid://qx3o42ogxy3a" path="res://Recursos/audio/Donkey Kong Country OST (Super Nintendo) - Track 0123 - Theme.mp3" id="9_xta27"]

[sub_resource type="LabelSettings" id="LabelSettings_sf2nm"]
font = ExtResource("5_kxp2b")
font_size = 36
font_color = Color(0.992157, 0.796078, 0.431373, 1)
outline_size = 46
outline_color = Color(0.788618, 4.81307e-07, 0.415213, 1)

[sub_resource type="LabelSettings" id="LabelSettings_axek8"]
font = ExtResource("4_hc03k")
font_size = 30

[node name="Registro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqqtu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1024.0
offset_bottom = 1536.0
scale = Vector2(0.703007, 0.833433)
texture = ExtResource("2_pcedv")

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.0
offset_top = -316.0
offset_right = 1039.0
offset_bottom = 1176.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.452482, 0.452482)
texture = ExtResource("2_x0dw3")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
modulate = Color(0.593, 0.867, 0.902, 0.184)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -317.0
offset_right = 1041.0
offset_bottom = 1175.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.452482, 0.452482)
texture = ExtResource("3_nm50x")

[node name="user_edit" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 369.84
offset_top = 675.519
offset_right = 674.84
offset_bottom = 747.519
theme_override_fonts/font = ExtResource("4_hc03k")
theme_override_font_sizes/font_size = 20

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 307.252
offset_top = 771.508
offset_right = 721.252
offset_bottom = 828.508
text = "NUEVA CONTRASEÃ‘A"
label_settings = SubResource("LabelSettings_sf2nm")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -170.0
offset_right = 179.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
text = "NUEVO USUARIO"
label_settings = SubResource("LabelSettings_sf2nm")
horizontal_alignment = 1

[node name="pass_edit" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 361.305
offset_top = 859.097
offset_right = 666.305
offset_bottom = 931.097
secret = true

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -298.0
offset_right = 120.0
offset_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2
text = "Registro"
label_settings = SubResource("LabelSettings_sf2nm")
horizontal_alignment = 1

[node name="LoginButton" type="Button" parent="TextureRect"]
modulate = Color(0, 1.002, 1, 1)
layout_mode = 0
offset_left = 344.236
offset_top = 964.685
offset_right = 695.236
offset_bottom = 1024.68
icon = ExtResource("6_ixrty")

[node name="CrearButton" type="Button" parent="TextureRect"]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 344.236
offset_top = 1045.68
offset_right = 695.236
offset_bottom = 1105.68
icon = ExtResource("7_8iuk7")

[node name="error_label" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 141.0
offset_top = 602.0
offset_right = 571.0
offset_bottom = 760.0
label_settings = SubResource("LabelSettings_axek8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xta27")
autoplay = true
parameters/looping = true
